--- a/pkg/admin/gui/front-end/html/index.html
+++ b/pkg/admin/gui/front-end/html/index.html
@@ -6,16 +6,22 @@
     <link rel="stylesheet" href="/webui/static/css/style.css">
     <link rel="icon" type="image/png" href="/webui/static/assets/icon_waarp.png">
     <script src="/webui/static/javaScript/undefined.js"></script>
+    <script src="/webui/static/javaScript/sidebar.js" defer></script>
     {{ block "head" . }}{{ end }}
     <img src="/webui/static/assets/Logo_Waarp_Banner.png" alt="Waarp Logo" class="logo-waarp">
   </head>
 
   <body class="bg-light">
   {{ template "header" . }}
-    <div class="container">
-      {{ block "content" . }}{{ end }}
+  <div class="d-flex">
+    {{ template "sidebar" . }}
+    <div class="flex-grow-1 p-3" id="mainContent">
+      <div class="container">
+        {{ block "content" . }}{{ end }}
+      </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
 {{ end }}
